<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartWaiter</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_sincronizar">Sincronizar Datos</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="sincronizar_imageView">Sincronizar</string>
    <string name="sincronizarDescripcion_label">Se procederá a descargar la información necesaria para poder trabajar en la toma de pedidos. </string>
    <string name="sincronizarCompleto_label">Data sincronizada correctamente.</string>

    <!-- Sincronizacion Receiver -->
    <string name="sync_notify_title_complete">Sincronización Completa</string>
    <string name="sync_notify_text_complete">El proceso de sicronización se completó con exito.</string>
    <string name="sync_notify_title_error">Error en sincronización</string>
    <string name="title_activity_combos">CombosActivity</string>
    <string name="title_activity_category">Categories</string>
    <string name="take_order_title">Take Order</string>
    <string name="order_details_title">Order Details</string>
    <string name="producto_pedido_label">Producto</string>
    <string name="precio_pedido_label">Precio</string>
    <string name="cantidad_pedido_label">Cantidad</string>
    <string name="sub_total_pedido_label">SubTotal</string>
    <string name="total_pedido_label">Total</string>
    <string name="igv_pedido_label">IGV</string>
    <!-- Sincronizacion Receiver -->
    <!--Drawer - Inicio-->
    <string name="opcion_sincronizar">Sincronizar</string>
    <string name="opcion_selec_mesa">Seleccionar Mesa</string>
    <string name="opcion_tomar_pedido">Tomar Pedido</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_delete">Delete</string>
    <string name="action_save_send">Enviar</string>
    <string name="action_save">Guardar</string>
    <string name="action_cancelar_pedido">Cancelar</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_order_list">Order List</string>
    <string name="title_activity_order_detail_list">OrderDetailList</string>
    <string name="opcion_listar_pedido">Lista Pedidos</string>
    <!--Drawer - Fin-->
</resources>
