<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:attr/activatedBackgroundIndicator">

    <TextView
        android:id="@+id/productoPedidoDescTextView"
        style="@style/TextViewContracted"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:maxLines="3"
        android:textColor="@android:color/black"
        android:text="@string/producto_pedido_label" />

    <TextView
        android:id="@+id/cantidadPedidoTextView"
        style="@style/TextViewContracted"
        android:layout_alignBaseline="@+id/productoPedidoDescTextView"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/black"
        android:text="@string/cantidad_pedido_label" />

    <TextView
        android:id="@+id/precioPedidoTextView"
        style="@style/TextViewContracted"
        android:layout_alignBaseline="@+id/productoPedidoDescTextView"
        android:layout_alignParentRight="true"
        android:textColor="@android:color/black"
        android:text="@string/precio_pedido_label" />
</RelativeLayout>
