<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
   	<RelativeLayout
   	    android:id="@+id/cabeceraPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true" >
        <TextView
	        android:id="@+id/productoPedidoLabel"
	        style="@style/LabelContracted"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentTop="true"
	        android:text="@string/producto_pedido_label" />

	    <TextView
	        android:id="@+id/cantidadPedidoLabel"
	        style="@style/LabelContracted"
            android:layout_alignBaseline="@+id/productoPedidoLabel"
	        android:layout_centerHorizontal="true"
	        android:text="@string/cantidad_pedido_label" />
	
	    <TextView
	        android:id="@+id/precioPedidoLabel"
	        style="@style/LabelContracted"
	        android:layout_alignBaseline="@+id/productoPedidoLabel"
            android:layout_alignParentRight="true"
	        android:text="@string/precio_pedido_label" />
	

    </RelativeLayout>    

    <LinearLayout       
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/footerPedido"
        android:layout_below="@+id/cabeceraPedido"        
        android:orientation="vertical" >

        <ListView
            android:id="@+id/detallePedidoListView"
            android:layout_width="match_parent"
            android:layout_margin="5dp"
            android:background="@color/holo_light"
            android:layout_height="match_parent"
            android:divider="@android:color/black"
            android:dividerHeight="1dp" >
        </ListView>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/footerPedido"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentBottom="true" >
        <!--Primera Fila-->
        <TextView
            android:id="@+id/subTotalPedidoLabel"
            style="@style/LabelContracted"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/sub_total_pedido_label" />
        <TextView
            android:id="@+id/subTotalPedidoTextView"
            style="@style/TextViewSmallContracted"
            android:layout_alignBaseline="@+id/subTotalPedidoLabel"
            android:layout_toRightOf="@+id/subTotalPedidoLabel"
            android:text="@string/sub_total_pedido_label" />
        <TextView
            android:id="@+id/TotalPedidoLabel"
            style="@style/LabelContracted"
            android:layout_alignBaseline="@+id/subTotalPedidoLabel"
            android:layout_alignParentRight="true"
            android:text="@string/total_pedido_label" />
        <!--Primera Fila-->
        <!--Segunda Fila-->
        <TextView
            android:id="@+id/igvPedidoLabel"
            style="@style/LabelContracted"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/subTotalPedidoLabel"
            android:text="@string/igv_pedido_label" />
        <TextView
            android:id="@+id/igvPedidoTextView"
            style="@style/TextViewSmallContracted"
            android:paddingLeft="0dp"
            android:layout_marginLeft="0dp"
            android:text="@string/igv_pedido_label"
            android:layout_alignBaseline="@+id/igvPedidoLabel"
            android:layout_below="@+id/subTotalPedidoTextView"
            android:layout_alignLeft="@+id/subTotalPedidoTextView"
             />
        <TextView
            android:id="@+id/totalPedidoTextView"
            style="@style/TextViewSmallContracted"
            android:layout_alignBaseline="@+id/igvPedidoLabel"
            android:layout_alignParentRight="true"
            android:text="@string/total_pedido_label" />
        <!--Segunda Fila-->
    </RelativeLayout>
</RelativeLayout>